infra/ingress/mlops/ minio-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: minio-console.192.168.1.121.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-minio-console
                port:
                  number: 9001
