infra/ingress/mlops/minio-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: minio-api.192.168.1.121.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-minio
                port:
                  number: 9000
